Bug 61401 - lirc_serial variable iommap wrong type
Summary: lirc_serial variable iommap wrong type
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Staging (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_staging@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-15 17:54 UTC by Harald Gutmann
Modified: 2017-09-01 18:06 UTC (History)
1 user (show)

See Also:
Kernel Version: 3.8.0-3.11.1
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Harald Gutmann 2013-09-15 17:54:25 UTC
lirc_serial.c from drivers/staging/media/lirc/ declares iommap as type bool in line 111 (v. 3.11.1)

Since the variable iommap is used to request_mem_region() in line 860 the type declaration is not suiteable.
Line 1275 with the module informations is also affected. And the description of the option suggest that an int value should be used.

The iommap variable is declared in lirc-0.8.6 and lirc-0.9.0 lirc_serial.c driver as int, which makes more sense.

Some PCI-E serial adapters use mmio to access the serial device. In my case I'd like to use such adapter for lirc_serial.


root@multi-player:~# cat /proc/tty/driver/serial 
serinfo:1.0 driver revision:
0: uart:unknown port:000003F8 irq:4
1: uart:unknown port:000002F8 irq:3
2: uart:unknown port:000003E8 irq:4
3: uart:unknown port:000002E8 irq:3
4: uart:unknown mmio:0xFE801000 irq:16
5: uart:unknown mmio:0xFE801200 irq:16


Kind regards,
Harald Gutmann
Comment 1 Harald Gutmann 2013-09-16 18:33:14 UTC
It seems that the whole iommap feature does not work the way I expect it to do.

Right now I'm working on a patch to make iommap usable for my serial adapter, and more generic.


Kind regards,
Harald Gutmann
Comment 2 Sean Young 2017-08-24 14:03:21 UTC
lirc_serial has been promoted out of staging into serial_ir.

serial_ir has had the type of iommap fixed.

See:

commit 069f3b10aed966b2da6bb1161af41da0e8880724
Author: Sean Young <sean@mess.org>
Date:   Mon Feb 13 20:53:23 2017 -0200

    [media] serial_ir: iommap is a memory address, not bool
    
    This has been broken for a long time, so presumably it is not used. I
    have no hardware to test this on.
    
    Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=61401
    
    Fixes: 90ab5ee ("module_param: make bool parameters really bool")
    
    Signed-off-by: Sean Young <sean@mess.org>
    Signed-off-by: Mauro Carvalho Chehab <mchehab@s-opensource.com>
Comment 3 Harald Gutmann 2017-09-01 18:06:39 UTC
Dear Sean Young,

thank you for fixing that bug. Setting it to resolved.

Unfortunately I don't have that hardware and more, so I can't test or verify it.


Best regards,
Harald Gutmann

Note You need to log in before you can comment on or make changes to this bug.